--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SENTIMENT APP</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>SentimentSense </h1>
+        </header>
+        <div class="input">
+            <input type="text" id="textbox">
+            <button id="button">Submit</button>
+        </div>
+        <div class="display">
+
+        </div>
+    </div>
+    <script src="index.js"></script>
+</body>
+</html>
